modified the path of libmsc.so in robot_void/CMakeLists.txt

--- a/src/robot_voice/CMakeLists.txt
+++ b/src/robot_voice/CMakeLists.txt
@@ -121,7 +121,7 @@ include_directories(
   include
 )
 
-link_libraries("./libs/x64/libmsc.so")
+link_libraries("${CMAKE_CURRENT_SOURCE_DIR}/libs/x64/libmsc.so")
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
